MALO-6 Add aria labels when no label should be visible, fix activities post and styling

--- a/src/css/utility.scss
+++ b/src/css/utility.scss
@@ -11,6 +11,13 @@
 .flex-3 {
   flex: 3;
 }
+.flex-5 {
+  flex: 5;
+}
+.flex-8 {
+  flex: 8;
+}
+
 .flex-col {
   display: flex;
   flex-direction: column;
